--- a/error.html
+++ b/error.html
@@ -24,7 +24,8 @@
             document.getElementById("item").innerHTML = "The Unique ID: "+x+" cannot be found.";
             </script>
             <p>
-            Try again in a minute, or 
+            New links may take 10 minutes to load. If a link is broken for
+            longer,  
             <a href=mailto:library@caltech.edu>contact us.</a>
 	    </p>
         </div>
